attempts to fix issue with detecting if wave link is open for non english computers